fix nav spilling onto two lines issue

--- a/static/scss/custom.scss
+++ b/static/scss/custom.scss
@@ -364,6 +364,13 @@ footer .footer-copy {
   .navbar-nav.pull-right {
     float: left !important;
   }
+
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+  .nav > li > a {
+    padding: 15px 9px;
+  }
 }
 
 @media (max-width: 550px) {
